--- a/.config/hypr/configs/binds.conf
+++ b/.config/hypr/configs/binds.conf
@@ -11,8 +11,16 @@ bind = $mainMod, G, exec, hypr_windows.sh
 
 bind=$mainMod,a,submap,action
 submap=action
-binde=,k,killactive
+binde=,c,killactive
+bind=,c,submap,reset
+binde=,l,resizeactive,80 0
+bind=,l,submap,reset
+binde=,h,resizeactive,-80 0
+bind=,h,submap,reset
+binde=,k,resizeactive,0 -80
 bind=,k,submap,reset
+binde=,j,resizeactive,0 80
+bind=,j,submap,reset
 binde=,e,exit
 bind=,e,submap,reset
 binde=,f,togglefloating
@@ -24,10 +32,19 @@ bind=$mainMod,e,submap,exec
 submap=exec
 binde=,r,exec,$runner
 bind=,r,submap,reset
+binde=,d,exec,udiskie-dmenu -l 4 -p '(U)Mount Device:'
+bind=,d,submap,reset
 binde=,b,exec,$browser
 bind=,b,submap,reset
 binde=,h,exec,cliphist list | bemenu -l 10 | cliphist decode | wl-copy
 bind=,h,submap,reset
+binde=,p,exec,pymor -l 2
+bind=,p,submap,reset
+binde=,n,exec,dunstctl close-all
+bind=,n,submap,reset
+binde=,s,exec,flatpak run com.valvesoftware.Steam
+bind=,s,submap,reset
+
 bind=,escape,submap,reset 
 submap=reset
 
@@ -154,9 +171,9 @@ submap=reset
 ## volume keychord
 bind=$mainMod,V,submap,volume
 submap=volume
-binde=,K,exec,~/.bin/volume.sh up
-binde=,J,exec,~/.bin/volume.sh down
-binde=,M,exec,~/.bin/volume.sh mute
+binde=,K,exec,swayosd-client --output-volume raise
+binde=,J,exec,swayosd-client --output-volume lower  
+binde=,M,exec,swayosd-client --output-volume mute-toggle  
 bind=,escape,submap,reset 
 submap=reset
 
