--- a/.config/hypr/configs/binds.conf
+++ b/.config/hypr/configs/binds.conf
@@ -36,6 +36,10 @@ binde=,d,exec,udiskie-dmenu -l 4 -p '(U)Mount Device:'
 bind=,d,submap,reset
 binde=,b,exec,$browser
 bind=,b,submap,reset
+binde=,e,exec,flatpak run com.github.wwmm.easyeffects -l LoudnessEqualizer
+bind=,e,submap,reset
+binde=,m,exec,flatpak run com.github.wwmm.easyeffects -l HeavyBass
+bind=,m,submap,reset
 binde=,h,exec,cliphist list | bemenu -l 10 | cliphist decode | wl-copy
 bind=,h,submap,reset
 binde=,p,exec,pymor -l 2
@@ -77,6 +81,11 @@ windowrule = float,$task
 windowrule = workspace special silent,$task
 windowrule = size 40% 80%,$task
 
+$btop = ^(btop)$
+windowrule = float,$btop
+windowrule = workspace special silent,$btop
+windowrule = size 90% 90%,$btop
+
 # one tap keychord
 ## layout keychord
 bind=$mainMod,L,submap,layout
@@ -113,12 +122,11 @@ binde=,u,exec,pypr toggle term
 bind=,u,submap,reset
 binde=,t,exec,pypr toggle task
 bind=,t,submap,reset
+binde=,b,exec,pypr toggle btop
+bind=,b,submap,reset
+
 binde=,i,exec,pypr toggle neorg
 bind=,i,submap,reset
-binde=,e,exec,flatpak run com.github.wwmm.easyeffects -l LoudnessEqualizer
-bind=,e,submap,reset
-binde=,b,exec,flatpak run com.github.wwmm.easyeffects -l HeavyBass
-bind=,b,submap,reset
 bind=,escape,submap,reset 
 submap=reset
 
