--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -2,7 +2,7 @@ monitor=,preferred,auto,auto
 
 # autostart
 exec-once = /home/cie/.config/hypr/hyprstart
-exec = hyprshade on blue-light-filter
+exec = hyprshade auto
 
 env = MOZ_ENABLE_WAYLAND,1 
 env = QT_QPA_PLATFORM,wayland
@@ -87,6 +87,8 @@ windowrulev2 = float,title:^(Fazer login nas Contas do Google — Mozilla Firefo
 windowrulev2 = workspace 2,class:^(firefox)$
 windowrulev2 = workspace 6,class:^(org.libretro.RetroArch)$
 windowrulev2 = workspace 6,class:^(pcsx2-qt)$
+windowrulev2 = workspace 6,class:^(zenity)$,title:^(Steam Setup)$
+windowrulev2 = workspace 6,title:^(Steam)$
 windowrulev2 = move 100 100,title:^(calculator)$
 # workspace rules
 windowrule = workspace 1, Code
