--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -81,6 +81,8 @@ windowrulev2 = float,class:^(nwg-look)$,title:^(nwg-look)$
 windowrulev2 = float,class:^(safeeyes)$,title:^(Safe Eyes)$
 windowrulev2 = float,class:^(org.kde.kdeconnect.app)$,title:^(KDE Connect)$
 windowrulev2 = float,class:^(firefox)$,title:^(Library)$
+windowrulev2 = float,class:^(Kuro)$
+windowrulev2 = size 60% 60%,class:^(Kuro)$
 windowrulev2 = float,class:^(fdm)$,title:^(Free Download Manager)$
 windowrulev2 = float,class:^(io.github.whoozle.android-file-transfer)$,title:^(Android File Transfer for Linux)$
 windowrulev2 = float,title:^(Fazer login nas Contas do Google — Mozilla Firefox)$
