--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -136,9 +136,9 @@ binde=,d,exec,udiskie-dmenu -l 4 -p '(U)Mount Device:'
 bind=,d,submap,reset
 binde=,b,exec,$browser
 bind=,b,submap,reset
-binde=,e,exec,flatpak run com.github.wwmm.easyeffects -l LoudnessEqualizer
+binde=,e,exec,easyeffects -l LoudnessEqualizer
 bind=,e,submap,reset
-binde=,m,exec,flatpak run com.github.wwmm.easyeffects -l HeavyBass
+binde=,m,exec,easyeffects -l HeavyBass
 bind=,m,submap,reset
 binde=,h,exec,cliphist list | bemenu -l 10 | cliphist decode | wl-copy
 bind=,h,submap,reset
