--- a/.config/mpv/input.conf
+++ b/.config/mpv/input.conf
@@ -132,7 +132,7 @@ m cycle mute
 # switch between applying no style overrides to SSA/ASS subtitles, and
 # overriding them almost completely with the normal subtitle style
 #u cycle-values sub-ass-override "force" "no"
-Alt+j cycle sub                            # cycle through subtitles
+#j cycle sub                            # cycle through subtitles
 #J cycle sub down                       # ...backwards
 #SHARP cycle audio                      # switch audio streams
 #_ cycle video
