--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -87,9 +87,11 @@ windowrulev2 = float,class:^(fdm)$,title:^(Free Download Manager)$
 windowrulev2 = float,class:^(io.github.whoozle.android-file-transfer)$,title:^(Android File Transfer for Linux)$
 windowrulev2 = float,title:^(Fazer login nas Contas do Google — Mozilla Firefox)$
 windowrulev2 = workspace 2,class:^(firefox)$
+windowrulev2 = workspace 2,class:^(qutebrowser)$
 windowrulev2 = workspace 6,class:^(org.libretro.RetroArch)$
 windowrulev2 = workspace 6,class:^(pcsx2-qt)$
 windowrulev2 = workspace 6,class:^(zenity)$,title:^(Steam Setup)$
+windowrulev2 = workspace 6,title:^(Steam)$
 windowrulev2 = workspace 6,title:^(Steam)$
 windowrulev2 = move 100 100,title:^(calculator)$
 # workspace rules
@@ -155,7 +157,8 @@ submap=reset
 ## Move focus with mainMod + arrow keys
 bind = $mainMod, J, layoutmsg,cyclenext
 bind = $mainMod, K, layoutmsg,cycleprev
-bind = $mainMod, C, layoutmsg,swapwithmaster
+bind = $mainMod, P, focuscurrentorlast
+bind = $mainMod, C, layoutmsg,swapwithmaster 
 bind = $sS, F, layoutmsg,focusmaster
 bind=SUPER,TAB,workspace,previous
 bind = $mainMod, U, layoutmsg,orientationtop
@@ -185,6 +188,11 @@ $btop = ^(btop)$
 windowrule = float,$btop
 windowrule = workspace special silent,$btop
 windowrule = size 90% 90%,$btop
+
+$kuro = ^(Kuro)$
+windowrule = float,$kuro
+windowrule = workspace special silent,$kuro
+windowrule = size 90% 90%,$kuro
 
 # one tap keychord
 ## layout keychord
@@ -220,10 +228,12 @@ binde=,g,exec,pypr toggle edge-gpt
 bind=,g,submap,reset
 binde=,u,exec,pypr toggle term
 bind=,u,submap,reset
-binde=,t,exec,pypr toggle task
-bind=,t,submap,reset
+#binde=,t,exec,pypr toggle task
+#bind=,t,submap,reset
 binde=,b,exec,pypr toggle btop
 bind=,b,submap,reset
+binde=,t,exec,pypr toggle kuro
+bind=,t,submap,reset
 
 binde=,i,exec,pypr toggle neorg
 bind=,i,submap,reset
