--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -189,11 +189,6 @@ windowrule = float,$btop
 windowrule = workspace special silent,$btop
 windowrule = size 90% 90%,$btop
 
-$kuro = ^(Kuro)$
-windowrule = float,$kuro
-windowrule = workspace special silent,$kuro
-windowrule = size 90% 90%,$kuro
-
 # one tap keychord
 ## layout keychord
 bind=$mainMod,L,submap,layout
@@ -228,13 +223,10 @@ binde=,g,exec,pypr toggle edge-gpt
 bind=,g,submap,reset
 binde=,u,exec,pypr toggle term
 bind=,u,submap,reset
-#binde=,t,exec,pypr toggle task
-#bind=,t,submap,reset
+binde=,t,exec,kuro
+bind=,t,submap,reset
 binde=,b,exec,pypr toggle btop
 bind=,b,submap,reset
-binde=,t,exec,pypr toggle kuro
-bind=,t,submap,reset
-
 binde=,i,exec,pypr toggle neorg
 bind=,i,submap,reset
 bind=,escape,submap,reset 
