--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -10,7 +10,8 @@ env = GDK_BACKEND,wayland,x11
 env = QT_QPA_PLATFORM,wayland;xcb
 env = SDL_VIDEODRIVER,wayland
 env = CLUTTER_BACKEND,wayland
-env = XDG_CURRENT_DESKTOP,Hyprland
+# this is for safeeyes smart pause to work
+env = XDG_CURRENT_DESKTOP,sway
 env = XDG_SESSION_TYPE,wayland
 env = XDG_SESSION_DESKTOP,Hyprland
 
@@ -27,8 +28,6 @@ input {
     kb_options = grp:ctrl_alt_toggle
     kb_rules =
 
-    follow_mouse = 0
-
     touchpad {
         natural_scroll = no
     }
@@ -43,6 +42,7 @@ general {
     gaps_in = 0
     gaps_out = 0
     border_size = 0
+    cursor_inactive_timeout	= 5
 
     layout = master
 }
@@ -86,13 +86,17 @@ windowrulev2 = size 60% 60%,class:^(Kuro)$
 windowrulev2 = float,class:^(fdm)$,title:^(Free Download Manager)$
 windowrulev2 = float,class:^(io.github.whoozle.android-file-transfer)$,title:^(Android File Transfer for Linux)$
 windowrulev2 = float,title:^(Fazer login nas Contas do Google — Mozilla Firefox)$
-windowrulev2 = workspace 2,class:^(firefox)$
-windowrulev2 = workspace 2,class:^(qutebrowser)$
-windowrulev2 = workspace 6,class:^(org.libretro.RetroArch)$
-windowrulev2 = workspace 6,class:^(pcsx2-qt)$
-windowrulev2 = workspace 6,class:^(zenity)$,title:^(Steam Setup)$
-windowrulev2 = workspace 6,title:^(Steam)$
-windowrulev2 = workspace 6,title:^(Steam)$
+windowrulev2 = workspace 2,class:^(firefox)$,
+windowrulev2 = workspace 2,class:^(org.qutebrowser.qutebrowser)$
+windowrulev2 = workspace 5,class:^(org.libretro.RetroArch)$
+windowrulev2 = workspace 5,class:^(lutris)$
+windowrulev2 = workspace 4,class:^(mpv)$
+windowrulev2 = workspace 5,class:^(pcsx2-qt)$
+windowrulev2 = workspace 5,class:^(zenity)$,title:^(Steam Setup)$
+windowrulev2 = workspace 5,title:^(Steam)$
+windowrulev2 = workspace 5,title:^(Steam)$
+windowrulev2 = workspace 5,title:^(Steam)$
+windowrulev2 = workspace 7,class:^(Waydroid)$
 windowrulev2 = move 100 100,title:^(calculator)$
 # workspace rules
 windowrule = workspace 1, Code
@@ -138,6 +142,8 @@ binde=,d,exec,udiskie-dmenu -l 4 -p '(U)Mount Device:'
 bind=,d,submap,reset
 binde=,b,exec,$browser
 bind=,b,submap,reset
+binde=,a,exec,waydroid show-full-ui
+bind=,a,submap,reset
 binde=,e,exec,easyeffects -l LoudnessEqualizer
 bind=,e,submap,reset
 binde=,m,exec,easyeffects -l HeavyBass
@@ -150,7 +156,8 @@ binde=,n,exec,dunstctl close-all
 bind=,n,submap,reset
 binde=,s,exec,flatpak run com.valvesoftware.Steam
 bind=,s,submap,reset
-
+binde=,l,exec,wlogout
+bind=,l,submap,reset
 bind=,escape,submap,reset 
 submap=reset
 
@@ -241,12 +248,14 @@ binde=,b,workspace,2
 bind=,b,submap,reset
 binde=,t,workspace,3
 bind=,t,submap,reset
-binde=,m,workspace,4
-bind=,m,submap,reset
-binde=,e,workspace,5
-bind=,e,submap,reset
-binde=,g,workspace,6
+binde=,v,workspace,4
+bind=,v,submap,reset
+binde=,g,workspace,5
 bind=,g,submap,reset
+binde=,m,workspace,6
+bind=,m,submap,reset
+binde=,a,workspace,7
+bind=,a,submap,reset
 bind=,escape,submap,reset 
 submap=reset
 
@@ -258,12 +267,14 @@ binde=,b,movetoworkspace, 2
 bind=,b,submap,reset
 binde=,t,movetoworkspace, 3
 bind=,t,submap,reset
-binde=,m,movetoworkspace, 4
-bind=,m,submap,reset
-binde=,e,movetoworkspace, 5
-bind=,e,submap,reset
-binde=,g,movetoworkspace, 6
+binde=,v,movetoworkspace, 4
+bind=,v,submap,reset
+binde=,g,movetoworkspace, 5
 bind=,g,submap,reset
+binde=,m,movetoworkspace, 6
+bind=,m,submap,reset
+binde=,a,movetoworkspace, 7
+bind=,a,submap,reset
 bind=,escape,submap,reset 
 submap=reset
 
