--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -5,22 +5,48 @@
         "modules-left": ["hyprland/workspaces"],
         "modules-right": ["hyprland/submap", "pulseaudio#icon", "pulseaudio", "custom/disk-root", "disk", "custom/disk-home", "disk#home", "custom/cpu-icon", "cpu","custom/ram-icon", "memory", "tray", "custom/separator", "clock", "clock#day", "clock#week-day"],
         "hyprland/workspaces": {
+            "all-outputs": false,
             "active-only": false,
-            "disable-scroll": true,
-            "all-outputs": true,
             "format": "{icon}",
             "format-icons": {
-                "1": "",
-                "2": "",
-                "3": "",
-                "4": "",
-                "5": "",
-                "6": "",
+                "1": " ",
+                "2": " ",
+                "3": " ",
+                "4": " ",
+                "5": " ",
+                "6": "",
+                "7": " ",
                 "urgent": "",
-                "focused": "",
-                "default": ""
+                "default": "",
+                "persistent": "persistent",
+                "empty": ""
             },
-            "on-click": "activate"
+            "persistent_workspaces": {
+                "1": [
+                    "VGA-1"
+                ],
+                "2": [
+                    "VGA-1"
+                ],
+                "3": [
+                    "VGA-1"
+                ],
+                "4": [
+                    "VGA-1"
+                ],
+                "5": [
+                    "VGA-1"
+                ],
+                "6": [
+                    "VGA-1"
+                ],
+                "7": [
+                    "VGA-1"
+                ],
+                "8": [
+                    "VGA-1"
+                ]
+            }
         },
         "pulseaudio#icon": {
             "format": "{icon}",
