added bard scrachtpad

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -191,6 +191,11 @@ windowrule = float,$task
 windowrule = workspace special silent,$task
 windowrule = size 40% 80%,$task
 
+$bard = ^(bard)$
+windowrule = float,$bard
+windowrule = workspace special silent,$bard
+windowrule = size 70% 80%,$bard
+
 $btop = ^(btop)$
 windowrule = float,$btop
 windowrule = workspace special silent,$btop
@@ -236,6 +241,8 @@ binde=,b,exec,pypr toggle btop
 bind=,b,submap,reset
 binde=,i,exec,pypr toggle neorg
 bind=,i,submap,reset
+binde=,c,exec,pypr toggle bard
+bind=,c,submap,reset
 bind=,escape,submap,reset 
 submap=reset
 
