--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -20,9 +20,8 @@ $sS = SUPERSHIFT
 $terminal = alacritty
 $runner = bemenu.sh
 $browser = firefox
-
-input {
-    kb_layout = br,br
+input { 
+    kb_layout = br,br, 
     kb_variant = nodeadkeys,
     kb_model =
     kb_options = grp:ctrl_alt_toggle
@@ -81,8 +80,17 @@ windowrulev2 = float,class:^(nwg-look)$,title:^(nwg-look)$
 windowrulev2 = float,class:^(safeeyes)$,title:^(Safe Eyes)$
 windowrulev2 = float,class:^(org.kde.kdeconnect.app)$,title:^(KDE Connect)$
 windowrulev2 = float,class:^(firefox)$,title:^(Library)$
+windowrulev2 = float,class:^(blueman-manager)$
+windowrulev2 = size 60% 60%,class:^(blueman-manager)$
+windowrulev2 = move 50% class:^(blueman-manager)$
+windowrulev2 = float,class:^(steam)$,title:^(Steam Settings)$
+windowrulev2 = float,class:^(steam)$,title:^(Controller Layout)$
+windowrulev2 = float,class:^(scrcpy)$,title:^(SM-A105M)$
+windowrulev2 = float,title:^(guiscrcpy)$
 windowrulev2 = float,class:^(Kuro)$
 windowrulev2 = size 60% 60%,class:^(Kuro)$
+windowrulev2 = float,class:^(h-m-m)$
+windowrulev2 = size 60% 60%,class:^(h-m-m)$
 windowrulev2 = float,class:^(fdm)$,title:^(Free Download Manager)$
 windowrulev2 = float,class:^(io.github.whoozle.android-file-transfer)$,title:^(Android File Transfer for Linux)$
 windowrulev2 = float,title:^(Fazer login nas Contas do Google — Mozilla Firefox)$
@@ -93,8 +101,6 @@ windowrulev2 = workspace 5,class:^(lutris)$
 windowrulev2 = workspace 4,class:^(mpv)$
 windowrulev2 = workspace 5,class:^(pcsx2-qt)$
 windowrulev2 = workspace 5,class:^(zenity)$,title:^(Steam Setup)$
-windowrulev2 = workspace 5,title:^(Steam)$
-windowrulev2 = workspace 5,title:^(Steam)$
 windowrulev2 = workspace 5,title:^(Steam)$
 windowrulev2 = workspace 7,class:^(Waydroid)$
 windowrulev2 = move 100 100,title:^(calculator)$
@@ -131,6 +137,8 @@ binde=,e,exit
 bind=,e,submap,reset
 binde=,f,togglefloating
 bind=,f,submap,reset
+binde=,w,exec,killall -SIGUSR2 waybar
+bind=,w,submap,reset
 bind=,escape,submap,reset 
 submap=reset
 
@@ -156,8 +164,10 @@ binde=,n,exec,dunstctl close-all
 bind=,n,submap,reset
 binde=,s,exec,flatpak run com.valvesoftware.Steam
 bind=,s,submap,reset
-binde=,l,exec,wlogout
+binde=,l,exec,open_mm.sh
 bind=,l,submap,reset
+binde=,o,exec,wlogout
+bind=,o,submap,reset
 bind=,escape,submap,reset 
 submap=reset
 
@@ -235,12 +245,12 @@ binde=,g,exec,pypr toggle edge-gpt
 bind=,g,submap,reset
 binde=,u,exec,pypr toggle term
 bind=,u,submap,reset
-binde=,t,exec,kuro
-bind=,t,submap,reset
 binde=,b,exec,pypr toggle btop
 bind=,b,submap,reset
 binde=,i,exec,pypr toggle neorg
 bind=,i,submap,reset
+binde=,t,exec,pypr toggle task && task sync
+bind=,t,submap,reset
 binde=,c,exec,pypr toggle bard
 bind=,c,submap,reset
 bind=,escape,submap,reset 
