--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -19,7 +19,7 @@ $mainMod = SUPER
 $sS = SUPERSHIFT
 $terminal = alacritty
 $runner = bemenu.sh
-$browser = firefox
+$browser = flatpak run org.mozilla.firefox
 input { 
     kb_layout = br,br, 
     kb_variant = nodeadkeys,
@@ -75,44 +75,8 @@ master {
   no_gaps_when_only = true
   orientation = top
 }
-windowrulev2 = float,class:^(org.kde.polkit-kde-authentication-agent-1)$,title:^(Authentication Required — PolicyKit1 KDE Agent)$
-windowrulev2 = float,class:^(nwg-look)$,title:^(nwg-look)$
-windowrulev2 = float,class:^(safeeyes)$,title:^(Safe Eyes)$
-windowrulev2 = float,class:^(org.kde.kdeconnect.app)$,title:^(KDE Connect)$
-windowrulev2 = float,class:^(firefox)$,title:^(Library)$
-windowrulev2 = float,class:^(blueman-manager)$
-windowrulev2 = size 60% 60%,class:^(blueman-manager)$
-windowrulev2 = move 50% class:^(blueman-manager)$
-windowrulev2 = float,class:^(steam)$,title:^(Steam Settings)$
-windowrulev2 = float,class:^(steam)$,title:^(Controller Layout)$
-windowrulev2 = float,class:^(scrcpy)$,title:^(SM-A105M)$
-windowrulev2 = float,title:^(guiscrcpy)$
-windowrulev2 = float,class:^(Kuro)$
-windowrulev2 = size 60% 60%,class:^(Kuro)$
-windowrulev2 = float,class:^(h-m-m)$
-windowrulev2 = size 60% 60%,class:^(h-m-m)$
-windowrulev2 = float,class:^(fdm)$,title:^(Free Download Manager)$
-windowrulev2 = float,class:^(io.github.whoozle.android-file-transfer)$,title:^(Android File Transfer for Linux)$
-windowrulev2 = float,title:^(Fazer login nas Contas do Google — Mozilla Firefox)$
-windowrulev2 = workspace 2,class:^(firefox)$,
-windowrulev2 = workspace 2,class:^(org.qutebrowser.qutebrowser)$
-windowrulev2 = workspace 5,class:^(org.libretro.RetroArch)$
-windowrulev2 = workspace 5,class:^(lutris)$
-windowrulev2 = workspace 4,class:^(mpv)$
-windowrulev2 = workspace 5,class:^(pcsx2-qt)$
-windowrulev2 = workspace 5,class:^(zenity)$,title:^(Steam Setup)$
-windowrulev2 = workspace 5,title:^(Steam)$
-windowrulev2 = workspace 7,class:^(Waydroid)$
-windowrulev2 = move 100 100,title:^(calculator)$
-# workspace rules
-windowrule = workspace 1, Code
-windowrule = workspace 2, Brave-browser
-windowrule = workspace 3, Alacritty
-#windowrule = workspace 4, qutebrowser
-windowrulev2 = workspace 6, class:^(heroic)$
-windowrulev2 = workspace 6, class:^(steam)$
-windowrulev2 = float,class:^(pavucontrol)$,title:^(Volume Control)$
 
+source = ~/.config/hypr/configs/wrules.conf
 
 # binds
 bind = $mainMod, T, exec, $terminal
@@ -146,15 +110,15 @@ bind=$mainMod,e,submap,exec
 submap=exec
 binde=,r,exec,$runner
 bind=,r,submap,reset
-binde=,d,exec,udiskie-dmenu -l 4 -p '(U)Mount Device:'
-bind=,d,submap,reset
+binde=,s,exec,~/.bin/dmenu-search/dmenu-websearch
+bind=,s,submap,reset
 binde=,b,exec,$browser
 bind=,b,submap,reset
 binde=,a,exec,waydroid show-full-ui
 bind=,a,submap,reset
-binde=,e,exec,easyeffects -l LoudnessEqualizer
+binde=,e,exec,flatpak run com.github.wwmm.easyeffects -l LoudnessEqualizer
 bind=,e,submap,reset
-binde=,m,exec,easyeffects -l HeavyBass
+binde=,m,exec,flatpak run com.github.wwmm.easyeffects -l HeavyBass
 bind=,m,submap,reset
 binde=,h,exec,cliphist list | bemenu -l 10 | cliphist decode | wl-copy
 bind=,h,submap,reset
@@ -162,13 +126,21 @@ binde=,p,exec,pymor -l 2
 bind=,p,submap,reset
 binde=,n,exec,dunstctl close-all
 bind=,n,submap,reset
-binde=,s,exec,flatpak run com.valvesoftware.Steam
-bind=,s,submap,reset
 binde=,l,exec,open_mm.sh
 bind=,l,submap,reset
 binde=,o,exec,wlogout
 bind=,o,submap,reset
 bind=,escape,submap,reset 
+submap=reset
+
+bind=$mainMod,g,submap,games
+submap=games
+binde=,s,exec,steam
+bind=,s,submap,reset
+binde=,l,exec,lutris
+bind=,l,submap,reset
+binde=,l,exec,heroic
+bind=,l,submap,reset
 submap=reset
 
 ## Move focus with mainMod + arrow keys
