--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -1,9 +1,9 @@
 {
     "layer": "top",
-    "width": 40,
+        "width": 40,
         "position": "right",
         "modules-left": ["hyprland/workspaces"],
-        "modules-right": ["hyprland/submap", "gamemode", "pulseaudio#icon", "pulseaudio", "custom/disk-root", "disk", "custom/disk-home", "disk#home", "custom/cpu-icon", "cpu","custom/ram-icon", "memory", "tray", "custom/separator", "clock", "clock#day", "clock#week-day"],
+        "modules-right": ["hyprland/submap", "custom/dsbattery-icon", "custom/dsbattery", "pulseaudio#icon", "pulseaudio", "custom/disk-root", "disk", "custom/disk-home", "disk#home", "custom/cpu-icon", "cpu","custom/ram-icon", "memory", "tray", "custom/separator", "clock", "clock#day", "clock#week-day"],
         "hyprland/workspaces": {
             "all-outputs": false,
             "active-only": false,
@@ -19,7 +19,6 @@
                 "urgent": "",
                 "default": "",
                 "persistent": "persistent",
-                "empty": ""
             },
             "persistent_workspaces": {
                 "1": [
@@ -42,9 +41,6 @@
                 ],
                 "7": [
                     "VGA-1"
-                ],
-                "8": [
-                    "VGA-1"
                 ]
             }
         },
@@ -60,6 +56,21 @@
             "tooltip": true,
             "tooltip-format": "Games running: {count}"
         },
+        "custom/dsbattery-icon": {
+            "format": "{}",
+            "interval": 60,
+            "escape": true,
+            "exec": "ps4_status.sh icon",
+            "on-click-right": "dsbattery -d"
+        },
+        "custom/dsbattery": {
+            "format": "{}",
+            "interval": 3,
+            "escape": true,
+            "exec": "ps4_status.sh perc",
+            "on-click-right": "dsbattery -d"
+        },
+
         "pulseaudio#icon": {
             "format": "{icon}",
             "format-bluetooth": "{icon}",
