--- a/.config/hypr/configs/wrules.conf
+++ b/.config/hypr/configs/wrules.conf
@@ -11,12 +11,6 @@ windowrulev2 = size 60% 60%,class:^(blueman-manager)$
 windowrulev2 = move 40% class:^(blueman-manager)$
 
 windowrulev2 = opacity 1.0 override,class:^(steam)$
-
-windowrulev2 = float,class:^(lutris)$
-windowrulev2 = opacity 1.0 override,class:^(lutris)$
-
-
-windowrulev2 = float,class:^(heroic)$
 windowrulev2 = opacity 1.0 override,class:^(heroic)$
 
 windowrulev2 = float,class:^(c_info)$,title:^(Alacritty)$
@@ -36,11 +30,12 @@ windowrulev2 = float,class:^(pavucontrol)$,title:^(Volume Control)$
 
 # default to wks
 windowrulev2 = workspace 2,class:^(firefox)$,
+windowrulev2 = workspace 2,class:^(floorp)$,
 windowrulev2 = workspace 2,class:^(org.qutebrowser.qutebrowser)$
 
 windowrulev2 = workspace 3,class:^(Alacritty)$
 
-windowrulev2 = workspace 4,class:^(mpv)$
+#windowrulev2 = workspace 4,class:^(mpv)$
 
 windowrulev2 = workspace 5,class:^(org.libretro.RetroArch)$
 windowrulev2 = workspace 5,class:^(pcsx2-qt)$
@@ -54,4 +49,8 @@ windowrulev2 = workspace 5, class:^(lutris)$
 windowrulev2 = workspace 6,class:^(YouTube Music)$,title:^(YouTube Music)$
 windowrulev2 = workspace 7,class:^(Waydroid)$
 
-workspace=5,bordersize:5,border:true
+windowrule = opacity 1.0 override 1.0 override,^(firefox)$
+windowrule = opacity 1.0 override 1.0 override,^(floorp)$
+
+
+
