--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -18,8 +18,8 @@ env = XDG_SESSION_DESKTOP,Hyprland
 $mainMod = SUPER
 $sS = SUPERSHIFT
 $terminal = alacritty
-$runner = bemenu.sh
-$browser = flatpak run org.mozilla.firefox
+$runner = kickoff
+$browser = firefox
 input { 
     kb_layout = br,br, 
     kb_variant = nodeadkeys,
@@ -48,9 +48,13 @@ general {
 
 decoration {
     rounding = 0
-    inactive_opacity = 0.5
+#    active_opacity = 0.8
+    inactive_opacity = 0.4
 
     col.shadow = rgba(1a1a1aee)
+    blur {
+      enabled = no
+    }
 }
 
 animations {
@@ -97,8 +101,6 @@ binde=,k,resizeactive,0 -80
 bind=,k,submap,reset
 binde=,j,resizeactive,0 80
 bind=,j,submap,reset
-binde=,e,exit
-bind=,e,submap,reset
 binde=,f,togglefloating
 bind=,f,submap,reset
 binde=,w,exec,killall -SIGUSR2 waybar
@@ -161,7 +163,7 @@ bindm = $mainMod, mouse:273, resizewindow
 $dropterm = ^(alacritty-dropterm)$
 windowrule = float,$dropterm
 windowrule = workspace special silent,$dropterm
-windowrule = size 80% 20%,$dropterm
+windowrule = size 80% 30%,$dropterm
 
 $todo = ^(neorg)$
 windowrule = float,$todo
