--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -11,15 +11,14 @@ env = QT_QPA_PLATFORM,wayland;xcb
 env = SDL_VIDEODRIVER,wayland
 env = CLUTTER_BACKEND,wayland
 # this is for safeeyes smart pause to work
-env = XDG_CURRENT_DESKTOP,sway
 env = XDG_SESSION_TYPE,wayland
 env = XDG_SESSION_DESKTOP,Hyprland
 
 $mainMod = SUPER
 $sS = SUPERSHIFT
 $terminal = alacritty
-$runner = kickoff
-$browser = firefox
+$runner = bemenu.sh
+$browser = floorp
 input { 
     kb_layout = br,br, 
     kb_variant = nodeadkeys,
@@ -48,12 +47,12 @@ general {
 
 decoration {
     rounding = 0
-#    active_opacity = 0.8
     inactive_opacity = 0.4
+    drop_shadow = no
 
     col.shadow = rgba(1a1a1aee)
     blur {
-      enabled = no
+      enabled = off
     }
 }
 
@@ -81,6 +80,7 @@ master {
 }
 
 source = ~/.config/hypr/configs/wrules.conf
+source = ~/.config/hypr/configs/submaps.conf
 
 # binds
 bind = $mainMod, T, exec, $terminal
@@ -89,38 +89,17 @@ bind = $mainMod, H, exec, cliphist list | bemenu -l 10 | cliphist decode | wl-co
 bind = $mainMod, N, exec, grim
 bind = $mainMod, G, exec, hypr_windows.sh
 
-bind=$mainMod,a,submap,action
-submap=action
-binde=,c,killactive
-bind=,c,submap,reset
-binde=,l,resizeactive,80 0
-bind=,l,submap,reset
-binde=,h,resizeactive,-80 0
-bind=,h,submap,reset
-binde=,k,resizeactive,0 -80
-bind=,k,submap,reset
-binde=,j,resizeactive,0 80
-bind=,j,submap,reset
-binde=,f,togglefloating
-bind=,f,submap,reset
-binde=,w,exec,killall -SIGUSR2 waybar
-bind=,w,submap,reset
-bind=,escape,submap,reset 
-submap=reset
-
 bind=$mainMod,e,submap,exec
 submap=exec
 binde=,r,exec,$runner
 bind=,r,submap,reset
-binde=,s,exec,~/.bin/dmenu-search/dmenu-websearch
-bind=,s,submap,reset
 binde=,b,exec,$browser
 bind=,b,submap,reset
 binde=,a,exec,waydroid show-full-ui
 bind=,a,submap,reset
-binde=,e,exec,flatpak run com.github.wwmm.easyeffects -l LoudnessEqualizer
+binde=,e,exec,easyeffects -l LoudnessEqualizer
 bind=,e,submap,reset
-binde=,m,exec,flatpak run com.github.wwmm.easyeffects -l HeavyBass
+binde=,m,exec,easyeffects -l 'my-heavy-bass'
 bind=,m,submap,reset
 binde=,h,exec,cliphist list | bemenu -l 10 | cliphist decode | wl-copy
 bind=,h,submap,reset
