--- a/.config/hypr/configs/submaps.conf
+++ b/.config/hypr/configs/submaps.conf
@@ -16,8 +16,70 @@ binde=,j,resizeactive,0 80
 bind=,escape,submap,reset 
 
 submap=window
-binde=,f,togglefloating
+binde=,o,togglefloating
+bind=,o,submap,reset
+binde=,f,fullscreen,0
 bind=,f,submap,reset
+binde=,b,fullscreen,1
+bind=,b,submap,reset
+binde=,i,fakefullscreen
+bind=,i,submap,reset
+bind=,escape,submap,reset 
 
 submap=reset
+
+bind=$mainMod,S,submap,scratchpad
+submap=scratchpad
+binde=,g,exec,pypr toggle edge-gpt
+bind=,g,submap,reset
+binde=,u,exec,pypr toggle term
+bind=,u,submap,reset
+binde=,b,exec,pypr toggle btop
+bind=,b,submap,reset
+binde=,i,exec,pypr toggle neorg
+bind=,i,submap,reset
+binde=,t,exec,pypr toggle task && task sync
+bind=,t,submap,reset
+binde=,c,exec,pypr toggle bard
+bind=,c,submap,reset
+bind=,escape,submap,reset 
+submap=reset
+
+bind=$mainMod,e,submap,exec
+submap=exec
+binde=,r,exec,$runner
+bind=,r,submap,reset
+binde=,b,exec,$browser
+bind=,b,submap,reset
+binde=,a,exec,waydroid show-full-ui
+bind=,a,submap,reset
+binde=,e,exec,easyeffects -l LoudnessEqualizer
+bind=,e,submap,reset
+binde=,m,exec,easyeffects -l 'my-heavy-bass'
+bind=,m,submap,reset
+binde=,h,exec,cliphist list | bemenu -l 10 | cliphist decode | wl-copy
+bind=,h,submap,reset
+binde=,p,exec,pymor -l 2
+bind=,p,submap,reset
+binde=,n,exec,dunstctl close-all
+bind=,n,submap,reset
+binde=,l,exec,open_mm.sh
+bind=,l,submap,reset
+binde=,o,exec,wlogout
+bind=,o,submap,reset
+bind=,g,submap,games
+bind=,escape,submap,reset 
+
+submap=games
+binde=,s,exec,steam
+bind=,s,submap,reset
+binde=,l,exec,lutris
+bind=,l,submap,reset
+binde=,h,exec,heroic
+bind=,h,submap,reset
+bind=,escape,submap,reset 
+submap=reset
+
+
+
 
