--- a/.config/hypr/configs/submaps.conf
+++ b/.config/hypr/configs/submaps.conf
@@ -2,8 +2,8 @@ bind=$mainMod,a,submap,action
 submap=action
 binde=,c,killactive
 bind=,c,submap,reset
-#binde=,w,exec,killall -SIGUSR2 waybar
-#bind=,w,submap,reset
+binde=,b,exec,killall -SIGUSR2 waybar
+bind=,b,submap,reset
 bind=,w,submap,window
 bind=,r,submap,resize
 bind=,escape,submap,reset 
@@ -24,24 +24,6 @@ binde=,b,fullscreen,1
 bind=,b,submap,reset
 binde=,i,fakefullscreen
 bind=,i,submap,reset
-bind=,escape,submap,reset 
-
-submap=reset
-
-bind=$mainMod,S,submap,scratchpad
-submap=scratchpad
-binde=,g,exec,pypr toggle edge-gpt
-bind=,g,submap,reset
-binde=,u,exec,pypr toggle term
-bind=,u,submap,reset
-binde=,b,exec,pypr toggle btop
-bind=,b,submap,reset
-binde=,i,exec,pypr toggle neorg
-bind=,i,submap,reset
-binde=,t,exec,pypr toggle task && task sync
-bind=,t,submap,reset
-binde=,c,exec,pypr toggle bard
-bind=,c,submap,reset
 bind=,escape,submap,reset 
 submap=reset
 
@@ -77,6 +59,8 @@ binde=,l,exec,lutris
 bind=,l,submap,reset
 binde=,h,exec,heroic
 bind=,h,submap,reset
+binde=,d,exec,dsbattery -d
+bind=,d,submap,reset
 bind=,escape,submap,reset 
 submap=reset
 
