--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -10,7 +10,6 @@ env = GDK_BACKEND,wayland,x11
 env = QT_QPA_PLATFORM,wayland;xcb
 env = SDL_VIDEODRIVER,wayland
 env = CLUTTER_BACKEND,wayland
-# this is for safeeyes smart pause to work
 env = XDG_SESSION_TYPE,wayland
 env = XDG_SESSION_DESKTOP,Hyprland
 
@@ -81,6 +80,7 @@ master {
 
 source = ~/.config/hypr/configs/wrules.conf
 source = ~/.config/hypr/configs/submaps.conf
+source = ~/.config/hypr/configs/scratchpads.conf
 
 # binds
 bind = $mainMod, T, exec, $terminal
@@ -104,31 +104,6 @@ bind = $mainMod, mouse_up, workspace, e-1
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
-$dropterm = ^(alacritty-dropterm)$
-windowrule = float,$dropterm
-windowrule = workspace special silent,$dropterm
-windowrule = size 80% 30%,$dropterm
-
-$todo = ^(neorg)$
-windowrule = float,$todo
-windowrule = workspace special silent,$todo
-windowrule = size 60% 40%,$todo
-
-$task = ^(task-tui)$
-windowrule = float,$task
-windowrule = workspace special silent,$task
-windowrule = size 40% 80%,$task
-
-$bard = ^(bard)$
-windowrule = float,$bard
-windowrule = workspace special silent,$bard
-windowrule = size 70% 80%,$bard
-
-$btop = ^(btop)$
-windowrule = float,$btop
-windowrule = workspace special silent,$btop
-windowrule = size 90% 90%,$btop
-
 # one tap keychord
 ## layout keychord
 bind=$mainMod,L,submap,layout
@@ -144,7 +119,6 @@ bind=,s,submap,reset
 bind=,escape,submap,reset 
 submap=reset
 
-## scratchpad keychord
 ## workspace keyshort
 bind=$mainMod,W,submap,workspace
 submap=workspace
@@ -181,17 +155,6 @@ binde=,m,movetoworkspace, 6
 bind=,m,submap,reset
 binde=,a,movetoworkspace, 7
 bind=,a,submap,reset
-bind=,escape,submap,reset 
-submap=reset
-
-# loop keychords
-## resize keychord
-bind=$sS,R,submap,resize
-submap=resize
-binde=,L,resizeactive,10 0
-binde=,H,resizeactive,-10 0
-binde=,K,resizeactive,0 -10
-binde=,J,resizeactive,0 10
 bind=,escape,submap,reset 
 submap=reset
 
