--- a/.config/hypr/configs/wrules.conf
+++ b/.config/hypr/configs/wrules.conf
@@ -21,6 +21,10 @@ windowrulev2 = float,title:^(guiscrcpy)$
 windowrulev2 = float,class:^(h-m-m)$
 windowrulev2 = size 60% 60%,class:^(h-m-m)$
 
+windowrulev2 = float,class:^(whatsapp-for-linux)$,title:^(WhatsApp for Linux)$
+windowrulev2 = size 70% 80%,class:^(whatsapp-for-linux)$
+windowrulev2 = move 200 80,class:^(whatsapp-for-linux)$
+
 windowrulev2 = float,class:^(io.github.whoozle.android-file-transfer)$,title:^(Android File Transfer for Linux)$
 
 windowrulev2 = float,class:^(firefox)$,title:^(Library)$
