--- a/.config/hypr/configs/scratchpads.conf
+++ b/.config/hypr/configs/scratchpads.conf
@@ -8,6 +8,11 @@ windowrule = float,$todo
 windowrule = workspace special silent,$todo
 windowrule = size 60% 40%,$todo
 
+$study = ^(study)$
+windowrule = float,$study
+windowrule = workspace special silent,$study
+windowrule = size 60% 40%,$study
+
 $task = ^(task-tui)$
 windowrule = float,$task
 windowrule = workspace special silent,$task
@@ -33,6 +38,8 @@ binde=,b,exec,pypr toggle btop
 bind=,b,submap,reset
 binde=,i,exec,pypr toggle neorg
 bind=,i,submap,reset
+binde=,s,exec,pypr toggle study
+bind=,s,submap,reset
 binde=,t,exec,pypr toggle task && task sync
 bind=,t,submap,reset
 binde=,c,exec,pypr toggle bard
