--- a/.config/hypr/configs/submaps.conf
+++ b/.config/hypr/configs/submaps.conf
@@ -1,6 +1,7 @@
 bind=$mainMod,a,submap,action
 submap=action
-binde=,c,killactive
+binde=,k,killactive
+bind=,k,submap,reset
 bind=,c,submap,reset
 binde=,b,exec,killall -SIGUSR2 waybar
 bind=,b,submap,reset
@@ -24,6 +25,12 @@ binde=,b,fullscreen,1
 bind=,b,submap,reset
 binde=,i,fakefullscreen
 bind=,i,submap,reset
+binde=,l,focuscurrentorlast
+bind=,l,submap,reset
+bind =,s,layoutmsg,swapwithmaster 
+bind=,s,submap,reset
+binde=,m,layoutmsg,focusmaster
+bind=,m,submap,reset
 bind=,escape,submap,reset 
 submap=reset
 
@@ -35,9 +42,9 @@ binde=,b,exec,$browser
 bind=,b,submap,reset
 binde=,a,exec,waydroid show-full-ui
 bind=,a,submap,reset
-binde=,e,exec,easyeffects -l LoudnessEqualizer
+binde=,e,exec, flatpak run com.github.wwmm.easyeffects -l 'LoudnessEqualizer'
 bind=,e,submap,reset
-binde=,m,exec,easyeffects -l 'my-heavy-bass'
+binde=,m,exec, flatpak run com.github.wwmm.easyeffects -l 'my-heavy-bass'
 bind=,m,submap,reset
 binde=,h,exec,cliphist list | bemenu -l 10 | cliphist decode | wl-copy
 bind=,h,submap,reset
@@ -63,7 +70,3 @@ binde=,d,exec,dsbattery -d
 bind=,d,submap,reset
 bind=,escape,submap,reset 
 submap=reset
-
-
-
-
