--- a/.config/hypr/configs/wrules.conf
+++ b/.config/hypr/configs/wrules.conf
@@ -56,5 +56,9 @@ windowrulev2 = workspace 7,class:^(Waydroid)$
 windowrule = opacity 1.0 override 1.0 override,^(firefox)$
 windowrule = opacity 1.0 override 1.0 override,^(floorp)$
 
+# this is for fixing steam menus
+windowrulev2 = stayfocused, title:^()$,class:^(steam)$
+windowrulev2 = minsize 1 1, title:^()$,class:^(steam)$
 
-
+# steam
+windowrulev2 = float,class:^(steam)$,title:^(Steam Settings)$
