--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,169 +1,12 @@
 monitor=,preferred,auto,auto
-
-# autostart
-exec-once = /home/cie/.config/hypr/hyprstart
-exec = hyprshade auto
-
-env = MOZ_ENABLE_WAYLAND,1 
-env = QT_QPA_PLATFORM,wayland
-env = GDK_BACKEND,wayland,x11
-env = QT_QPA_PLATFORM,wayland;xcb
-env = SDL_VIDEODRIVER,wayland
-env = CLUTTER_BACKEND,wayland
-env = XDG_SESSION_TYPE,wayland
-env = XDG_SESSION_DESKTOP,Hyprland
-
-$mainMod = SUPER
-$sS = SUPERSHIFT
-$terminal = alacritty
-$runner = bemenu.sh
-$browser = floorp
-input { 
-    kb_layout = br,br, 
-    kb_variant = nodeadkeys,
-    kb_model =
-    kb_options = grp:ctrl_alt_toggle
-    kb_rules =
-
-    touchpad {
-        natural_scroll = no
-    }
-
-    sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
-}
-
-device:epic-mouse-v1 {
-  sensitivity = -0.5
-}
-general {
-    gaps_in = 0
-    gaps_out = 0
-    border_size = 0
-    cursor_inactive_timeout	= 5
-
-    layout = master
-}
-
-decoration {
-    rounding = 0
-    inactive_opacity = 0.4
-    drop_shadow = no
-
-    col.shadow = rgba(1a1a1aee)
-    blur {
-      enabled = off
-    }
-}
-
-animations {
-    enabled = yes
-
-    bezier = myBezier, 0.05, 0.9, 0.1, 1.05
-
-    animation = windows, 1, 7, myBezier
-    animation = windowsOut, 1, 7, default, popin 80%
-    animation = border, 1, 10, default
-    animation = borderangle, 1, 8, default
-    animation = fade, 1, 7, default
-    animation = workspaces, 1, 6, default
-}
-
-binds {
-    allow_workspace_cycles = true
-}
-
-master {
-  new_is_master = true
-  no_gaps_when_only = true
-  orientation = top
-}
-
+source = ~/.config/hypr/configs/exec.conf
+source = ~/.config/hypr/configs/env.conf
+source = ~/.config/hypr/configs/vars.conf
+source = ~/.config/hypr/configs/input.conf
+source = ~/.config/hypr/configs/general.conf
 source = ~/.config/hypr/configs/wrules.conf
 source = ~/.config/hypr/configs/submaps.conf
 source = ~/.config/hypr/configs/scratchpads.conf
+source = ~/.config/hypr/configs/binds.conf
 
-# binds
-bind = $mainMod, T, exec, $terminal
-bind = $sS, C, killactive 
-bind = $mainMod, H, exec, cliphist list | bemenu -l 10 | cliphist decode | wl-copy
-bind = $mainMod, N, exec, grim
-bind = $mainMod, G, exec, hypr_windows.sh
-
-## Move focus with mainMod + arrow keys
-bind = $mainMod, J, layoutmsg,cyclenext
-bind = $mainMod, K, layoutmsg,cycleprev
-bind = $mainMod, P, focuscurrentorlast
-bind = $mainMod, C, layoutmsg,swapwithmaster 
-bind = $sS, F, layoutmsg,focusmaster
-bind=SUPER,TAB,workspace,previous
-bind = $mainMod, U, layoutmsg,orientationtop
-
-## mouse binds
-bind = $mainMod, mouse_down, workspace, e+1
-bind = $mainMod, mouse_up, workspace, e-1
-bindm = $mainMod, mouse:272, movewindow
-bindm = $mainMod, mouse:273, resizewindow
-
-# one tap keychord
-## layout keychord
-bind=$mainMod,L,submap,layout
-submap=layout
-binde=,j,layoutmsg,swapnext
-bind=,j,submap,reset
-binde=,k,layoutmsg,swapprev
-bind=,k,submap,reset
-binde=,f,layoutmsg,focusmaster
-bind=,f,submap,reset
-binde=,s,layoutmsg,swapwithmaster
-bind=,s,submap,reset
-bind=,escape,submap,reset 
-submap=reset
-
-## workspace keyshort
-bind=$mainMod,W,submap,workspace
-submap=workspace
-binde=,c,workspace,1
-bind=,c,submap,reset
-binde=,b,workspace,2
-bind=,b,submap,reset
-binde=,t,workspace,3
-bind=,t,submap,reset
-binde=,v,workspace,4
-bind=,v,submap,reset
-binde=,g,workspace,5
-bind=,g,submap,reset
-binde=,m,workspace,6
-bind=,m,submap,reset
-binde=,a,workspace,7
-bind=,a,submap,reset
-bind=,escape,submap,reset 
-submap=reset
-
-bind=$mainMod,M,submap,movetoworkspace
-submap=movetoworkspace
-binde=,c,movetoworkspace, 1
-bind=,c,submap,reset
-binde=,b,movetoworkspace, 2
-bind=,b,submap,reset
-binde=,t,movetoworkspace, 3
-bind=,t,submap,reset
-binde=,v,movetoworkspace, 4
-bind=,v,submap,reset
-binde=,g,movetoworkspace, 5
-bind=,g,submap,reset
-binde=,m,movetoworkspace, 6
-bind=,m,submap,reset
-binde=,a,movetoworkspace, 7
-bind=,a,submap,reset
-bind=,escape,submap,reset 
-submap=reset
-
-## volume keychord
-bind=$mainMod,V,submap,volume
-submap=volume
-binde=,K,exec,swayosd-client --output-volume raise
-binde=,J,exec,swayosd-client --output-volume lower  
-binde=,M,exec,swayosd-client --output-volume mute-toggle  
-bind=,escape,submap,reset 
-submap=reset
 
