--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -3,7 +3,7 @@
         "width": 40,
         "position": "right",
         "modules-left": ["hyprland/workspaces"],
-        "modules-right": ["hyprland/submap", "custom/dsbattery-icon", "custom/dsbattery", "pulseaudio#icon", "pulseaudio", "custom/disk-root", "disk", "custom/disk-home", "disk#home", "custom/cpu-icon", "cpu", "custom/ram-icon", "memory", "tray", "custom/separator", "clock", "clock#day", "clock#week-day"],
+        "modules-right": ["hyprland/submap", "custom/dsbattery-icon", "custom/dsbattery", "pulseaudio#icon", "pulseaudio", "custom/disk-root", "disk", "custom/disk-home", "disk#home", "custom/cpu-icon", "cpu","custom/ram-icon", "memory", "custom/separator", "tray", "custom/separator", "clock", "clock#day", "clock#week-day"],
         "hyprland/workspaces": {
             "all-outputs": false,
             "active-only": false,
@@ -70,6 +70,7 @@
             "exec": "ps4_status.sh perc",
             "on-click-right": "dsbattery -d"
         },
+
         "pulseaudio#icon": {
             "format": "{icon}",
             "format-bluetooth": "{icon}",
@@ -127,7 +128,7 @@
             "format": "{:%a}",
         },
         "custom/separator": {
-            "format": "──",
+            "format": "────",
             "tooltip": false,
         },
         "custom/ram-icon": {
