--- a/.keyd.conf
+++ b/.keyd.conf
@@ -9,9 +9,9 @@ meta = oneshot(meta)
 control = oneshot(control)
 
 leftalt = oneshot(alt)
-rightalt = oneshot(meta)
+rightalt = oneshot(altgr)
 
-capslock = overload(control, esc)
+capslock = overload(meta, esc)
 insert = S-insert
 
 [main]
@@ -19,5 +19,4 @@ insert = S-insert
 [control]
 k = C-A-f1
 j = M-S-e
-
 
