--- a/.config/hypr/configs/wrules.conf
+++ b/.config/hypr/configs/wrules.conf
@@ -54,6 +54,7 @@ windowrulev2 = workspace 6,class:^(YouTube Music)$,title:^(YouTube Music)$
 windowrulev2 = workspace 7,class:^(Waydroid)$
 
 windowrule = opacity 1.0 override 1.0 override,^(firefox)$
+windowrule = opacity 1.0 override 1.0 override,^(org.mozilla.firefox)$
 windowrule = opacity 1.0 override 1.0 override,^(floorp)$
 
 # this is for fixing steam menus
