--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,4 +1,5 @@
-monitor=,preferred,auto,auto
+#monitor=,preferred,auto,auto
+monitor=VGA-1,1360x768@60,0x0,1
 source = ~/.config/hypr/configs/exec.conf
 source = ~/.config/hypr/configs/env.conf
 source = ~/.config/hypr/configs/vars.conf
