--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -1,166 +1,177 @@
 {
-    "layer": "top",
-        "position": "right",
-        "modules-left": ["hyprland/workspaces"],
-        "modules-right": ["hyprland/submap", "custom/dsbattery-icon", "custom/dsbattery", "pulseaudio#icon", "pulseaudio", "custom/disk-root", "disk", "custom/disk-home", "disk#home", "custom/cpu-icon", "cpu","custom/ram-icon", "memory", "custom/separator", "tray", "custom/separator", "clock", "clock#day", "clock#week-day"],
-        "hyprland/workspaces": {
-            "all-outputs": false,
-            "active-only": false,
-            "format": "{icon}",
-            "format-icons": {
-                "1": " ",
-                "2": " ",
-                "3": "",
-                "4": " ",
-                "5": " ",
-                "6": "  ",
-                "7": " ",
-                "urgent": "",
-                "default": "",
-                "persistent": "persistent",
-            },
-            "persistent-workspaces": {
-                "1": [
-                    "VGA-1"
-                ],
-                "2": [
-                    "VGA-1"
-                ],
-                "3": [
-                    "VGA-1"
-                ],
-                "4": [
-                    "VGA-1"
-                ],
-                "5": [
-                    "VGA-1"
-                ],
-                "6": [
-                    "VGA-1"
-                ],
-                "7": [
-                    "VGA-1"
-                ]
-            }
-        },
-        "gamemode": {
-            "format": "{glyph}",
-            "format-alt": "{glyph} {count}",
-            "glyph": "",
-            "hide-not-running": false,
-            "use-icon": true,
-            "icon-name": "input-gaming-symbolic",
-            "icon-spacing": 4,
-            "icon-size": 20,
-            "tooltip": true,
-            "tooltip-format": "Games running: {count}"
-        },
-        "custom/dsbattery-icon": {
-            "format": "{}",
-            "interval": 60,
-            "escape": true,
-            "exec": "ps4_status.sh icon",
-            "on-click-right": "dsbattery -d"
-        },
-        "custom/dsbattery": {
-            "format": "{}",
-            "interval": 3,
-            "escape": true,
-            "exec": "ps4_status.sh perc",
-            "on-click-right": "dsbattery -d"
-        },
+  "layer": "top",
+    "position": "right",
+    "modules-left": ["hyprland/workspaces"],
+    "modules-right": ["hyprland/submap", "custom/dsbattery-icon", "custom/dsbattery", "pulseaudio#icon", "pulseaudio", "custom/disk-root", "disk", "custom/disk-home", "disk#home", "custom/temp-icon", "temperature", "custom/cpu-icon", "cpu","custom/ram-icon", "memory","custom/separator", "tray", "custom/separator", "clock", "clock#day", "clock#week-day"],
+    "hyprland/workspaces": {
+      "all-outputs": false,
+      "active-only": false,
+      "format": "{icon}",
+      "format-icons": {
+        "1": " ",
+        "2": " ",
+        "3": "",
+        "4": " ",
+        "5": " ",
+        "6": "  ",
+        "7": " ",
+        "urgent": " ",
+        "default": "",
+        "persistent": "persistent",
+      },
+      "persistent-workspaces": {
+        "1": [
+          "VGA-1"
+        ],
+        "2": [
+          "VGA-1"
+        ],
+        "3": [
+          "VGA-1"
+        ],
+        "4": [
+          "VGA-1"
+        ],
+        "5": [
+          "VGA-1"
+        ],
+        "6": [
+          "VGA-1"
+        ],
+        "7": [
+          "VGA-1"
+        ]
+      }
+    },
+    "gamemode": {
+      "format": "{glyph}",
+      "format-alt": "{glyph} {count}",
+      "glyph": "",
+      "hide-not-running": false,
+      "use-icon": true,
+      "icon-name": "input-gaming-symbolic",
+      "icon-spacing": 4,
+      "icon-size": 20,
+      "tooltip": true,
+      "tooltip-format": "Games running: {count}"
+    },
+    "custom/temp-icon": {
+      "tooltip": false,
+      "format": ""
+    },
+    "temperature": {
+      "thermal-zone": 2,
+      // "hwmon-path": "/sys/class/hwmon/hwmon2/temp1_input",
+      // "critical-threshold": 80,
+      // "format-critical": "{temperatureC}°C ",
+      "format": "{temperatureC}°"
+    },
+    "custom/dsbattery-icon": {
+      "format": "{}",
+      "interval": 60,
+      "escape": true,
+      "exec": "ps4_status.sh icon",
+      "on-click-right": "dsbattery -d"
+    },
+    "custom/dsbattery": {
+      "format": "{}",
+      "interval": 3,
+      "escape": true,
+      "exec": "ps4_status.sh perc",
+      "on-click-right": "dsbattery -d"
+    },
 
-        "pulseaudio#icon": {
-            "format": "{icon}",
-            "format-bluetooth": "{icon}",
-            "format-muted": "",
-            "format-icons": {
-                "headphone": "",
-                "hands-free": "",
-                "headset": "",
-                "phone": "",
-                "portable": "",
-                "car": "",
-                "default": ["", ""]
-            },
-            "scroll-step": 1,
-            "on-click": "pavucontrol",
-            "ignored-sinks": ["Easy Effects Sink"]
-        },
-        "pulseaudio": {
-            "format": "{volume}%",
-            "format-bluetooth": "{volume}%",
-            "scroll-step": 1,
-            "on-click": "pavucontrol",
-            "ignored-sinks": ["Easy Effects Sink"]
-        },
-        "hyprland/submap": {
-            "format": "",
-            "max-length": 8,
-            "tooltip": false
-        },
-        "tray": {
-            "icon-size": 21,
-            "spacing": 10
-        },
-        "clock#day": {
-            "format": "{:%d}",
-            "tooltip-format": "<tt><small>{calendar}</small></tt>",
-            "calendar": {
-                "mode"          : "month",
-                "mode-mon-col"  : 1,
-                "weeks-pos"     : "right",
-                "on-scroll"     : 1,
-                "format": {
-                    "months":     "<span color='#ffead3'><b>{}</b></span>",
-                    "days":       "<span color='#ecc6d9'><b>{}</b></span>",
-                    "weeks":      "<span color='#99ffdd'><b>W{}</b></span>",
-                    "weekdays":   "<span color='#ffcc66'><b>{}</b></span>",
-                    "today":      "<span color='#ff6699'><b><u>{}</u></b></span>"
-                }
-            },
-        },
-        "clock": {
-            "format": "{:%H\n%M}",
-        },
-        "clock#week-day": {
-            "format": "{:%a}",
-        },
-        "custom/separator": {
-            "format": "",
-            "tooltip": false,
-        },
-        "custom/ram-icon": {
-            "tooltip": false,
-            "format": ""
-        },
-        "memory": {
-            "format": "{}%"
-        },
-        "custom/cpu-icon": {
-            "tooltip": false,
-            "format": ""
-        },
-        "cpu": {
-            "format": "{usage}%",
-            "interval": 1,
-        },
-        "custom/disk-root": {
-            "tooltip": false,
-            "format": ""
-        },
-        "disk": {
-            "interval": 30,
-            "format": "{percentage_free}%",
-            "path": "/"
-        },
-        "custom/disk-home": {
-            "tooltip": false,
-            "format": ""
-        },
-        "disk#home": {
-            "interval": 30,
-            "format": "{percentage_free}%",
-            "path": "/home"
-        },
+    "pulseaudio#icon": {
+      "format": "{icon}",
+      "format-bluetooth": "{icon}",
+      "format-muted": "",
+      "format-icons": {
+        "headphone": "",
+        "hands-free": "",
+        "headset": "",
+        "phone": "",
+        "portable": "",
+        "car": "",
+        "default": ["", ""]
+      },
+      "scroll-step": 1,
+      "on-click": "pavucontrol",
+      "ignored-sinks": ["Easy Effects Sink"]
+    },
+    "pulseaudio": {
+      "format": "{volume}%",
+      "format-bluetooth": "{volume}%",
+      "scroll-step": 1,
+      "on-click": "pavucontrol",
+      "ignored-sinks": ["Easy Effects Sink"]
+    },
+    "hyprland/submap": {
+      "format": "",
+      "max-length": 8,
+      "tooltip": false
+    },
+    "tray": {
+      "icon-size": 21,
+      "spacing": 10
+    },
+    "clock#day": {
+      "format": "{:%d}",
+      "tooltip-format": "<tt><small>{calendar}</small></tt>",
+      "calendar": {
+        "mode"          : "month",
+        "mode-mon-col"  : 1,
+        "weeks-pos"     : "right",
+        "on-scroll"     : 1,
+        "format": {
+          "months":     "<span color='#ffead3'><b>{}</b></span>",
+          "days":       "<span color='#ecc6d9'><b>{}</b></span>",
+          "weeks":      "<span color='#99ffdd'><b>W{}</b></span>",
+          "weekdays":   "<span color='#ffcc66'><b>{}</b></span>",
+          "today":      "<span color='#ff6699'><b><u>{}</u></b></span>"
+        }
+      },
+    },
+    "clock": {
+      "format": "{:%H\n%M}",
+    },
+    "clock#week-day": {
+      "format": "{:%a}",
+    },
+    "custom/separator": {
+      "format": "",
+      "tooltip": false,
+    },
+    "custom/ram-icon": {
+      "tooltip": false,
+      "format": ""
+    },
+    "memory": {
+      "format": "{}%"
+    },
+    "custom/cpu-icon": {
+      "tooltip": false,
+      "format": ""
+    },
+    "cpu": {
+      "format": "{usage}%",
+      "interval": 1,
+    },
+    "custom/disk-root": {
+      "tooltip": false,
+      "format": ""
+    },
+    "disk": {
+      "interval": 30,
+      "format": "{percentage_free}%",
+      "path": "/"
+    },
+    "custom/disk-home": {
+      "tooltip": false,
+      "format": ""
+    },
+    "disk#home": {
+      "interval": 30,
+      "format": "{percentage_free}%",
+      "path": "/home"
+    },
 }
