--- a/.config/hypr/configs/submaps.conf
+++ b/.config/hypr/configs/submaps.conf
@@ -2,7 +2,8 @@ bind=$mainMod,a,submap,action
 submap=action
 binde=,k,killactive
 bind=,k,submap,reset
-bind=,c,submap,reset
+bind=,i,exec,hypr_windows.sh
+bind=,i,submap,reset
 binde=,b,exec,killall -SIGUSR2 waybar
 bind=,b,submap,reset
 bind=,w,submap,window
@@ -27,7 +28,7 @@ binde=,i,fakefullscreen
 bind=,i,submap,reset
 binde=,l,focuscurrentorlast
 bind=,l,submap,reset
-bind =,s,layoutmsg,swapwithmaster 
+bind=,s,layoutmsg,swapwithmaster 
 bind=,s,submap,reset
 binde=,m,layoutmsg,focusmaster
 bind=,m,submap,reset
@@ -70,3 +71,65 @@ binde=,d,exec,dsbattery -d
 bind=,d,submap,reset
 bind=,escape,submap,reset 
 submap=reset
+
+bind=$mainMod,L,submap,layout
+submap=layout
+binde=,j,layoutmsg,swapnext
+bind=,j,submap,reset
+binde=,k,layoutmsg,swapprev
+bind=,k,submap,reset
+binde=,f,layoutmsg,focusmaster
+bind=,f,submap,reset
+binde=,s,layoutmsg,swapwithmaster
+bind=,s,submap,reset
+bind=,escape,submap,reset 
+submap=reset
+
+## workspace keyshort
+bind=$mainMod,W,submap,workspace
+submap=workspace
+binde=,c,workspace,1
+bind=,c,submap,reset
+binde=,b,workspace,2
+bind=,b,submap,reset
+binde=,t,workspace,3
+bind=,t,submap,reset
+binde=,v,workspace,4
+bind=,v,submap,reset
+binde=,g,workspace,5
+bind=,g,submap,reset
+binde=,m,workspace,6
+bind=,m,submap,reset
+binde=,a,workspace,7
+bind=,a,submap,reset
+bind=,escape,submap,reset 
+submap=reset
+
+bind=$mainMod,M,submap,movetoworkspace
+submap=movetoworkspace
+binde=,c,movetoworkspace, 1
+bind=,c,submap,reset
+binde=,b,movetoworkspace, 2
+bind=,b,submap,reset
+binde=,t,movetoworkspace, 3
+bind=,t,submap,reset
+binde=,v,movetoworkspace, 4
+bind=,v,submap,reset
+binde=,g,movetoworkspace, 5
+bind=,g,submap,reset
+binde=,m,movetoworkspace, 6
+bind=,m,submap,reset
+binde=,a,movetoworkspace, 7
+bind=,a,submap,reset
+bind=,escape,submap,reset 
+submap=reset
+
+## volume keychord
+bind=$mainMod,V,submap,volume
+submap=volume
+binde=,K,exec,swayosd-client --output-volume raise
+binde=,J,exec,swayosd-client --output-volume lower  
+binde=,M,exec,swayosd-client --output-volume mute-toggle  
+bind=,escape,submap,reset 
+submap=reset
+
