--- a/.config/hypr/configs/general.conf
+++ b/.config/hypr/configs/general.conf
@@ -1,42 +1,49 @@
 general {
-    gaps_in = 0
-    gaps_out = 0
-    border_size = 0
-    cursor_inactive_timeout	= 5
+  gaps_in = 0
+  gaps_out = 0
+  border_size = 0
+  cursor_inactive_timeout	= 5
 
-    layout = master
+  layout = master
 }
 
 decoration {
-    rounding = 0
-    inactive_opacity = 0.4
-    drop_shadow = no
+  rounding = 0
+  inactive_opacity = 0.4
+  drop_shadow = no
 
-    col.shadow = rgba(1a1a1aee)
-    blur {
-      enabled = off
-    }
+  col.shadow = rgba(1a1a1aee)
+  blur {
+    enabled = off
+  }
 }
 
 animations {
-    enabled = yes
+  enabled = yes
 
-    bezier = myBezier, 0.05, 0.9, 0.1, 1.05
+  bezier = myBezier, 0.05, 0.9, 0.1, 1.05
 
-    animation = windows, 1, 7, myBezier
-    animation = windowsOut, 1, 7, default, popin 80%
-    animation = border, 1, 10, default
-    animation = borderangle, 1, 8, default
-    animation = fade, 1, 7, default
-    animation = workspaces, 1, 6, default
+  animation = windows, 1, 7, myBezier
+  animation = windowsOut, 1, 7, default, popin 80%
+  animation = border, 1, 10, default
+  animation = borderangle, 1, 8, default
+  animation = fade, 1, 7, default
+  animation = workspaces, 1, 6, default
 }
 
 binds {
-    allow_workspace_cycles = true
+  allow_workspace_cycles = true
 }
 
 master {
   new_is_master = true
   no_gaps_when_only = true
   orientation = top
+}
+
+misc {
+  mouse_move_enables_dpms=true
+  disable_splash_rendering = true
+  key_press_enables_dpms=true
+  disable_hyprland_logo = true
 }
