--- a/.config/hypr/configs/input.conf
+++ b/.config/hypr/configs/input.conf
@@ -2,7 +2,7 @@ input {
     kb_layout = us,us, 
     kb_variant = ,intl
     kb_model =
-    kb_options = grp:ctrl_alt_toggle
+    kb_options = grp:ctrl_alt_toggle,ctrl:nocaps
     kb_rules =
 
     touchpad {
