--- a/.config/hypr/configs/wrules.conf
+++ b/.config/hypr/configs/wrules.conf
@@ -1,65 +1,56 @@
+# floating 
 windowrulev2 = float,class:^(org.kde.polkit-kde-authentication-agent-1)$,title:^(Authentication Required — PolicyKit1 KDE Agent)$
 windowrulev2 = float,class:^(nwg-look)$,title:^(nwg-look)$
 windowrulev2 = float,class:^(safeeyes)$,title:^(Safe Eyes)$
 windowrulev2 = float,class:^(com.github.tchx84.Flatseal)$,title:^(Flatseal)$
 windowrulev2 = float,class:^(org.kde.kdeconnect.app)$,title:^(KDE Connect)$
-
 windowrulev2 = float,class:^(net.davidotek.pupgui2)$,title:^(ProtonUp-Qt - Wine/Proton Installer)$
-
+# blueman
 windowrulev2 = float,class:^(blueman-manager)$
 windowrulev2 = size 60% 60%,class:^(blueman-manager)$
 windowrulev2 = move 40% class:^(blueman-manager)$
-
-windowrulev2 = opacity 1.0 override,class:^(steam)$
-windowrulev2 = opacity 1.0 override,class:^(heroic)$
-
 windowrulev2 = float,class:^(c_info)$,title:^(Alacritty)$
-
 windowrulev2 = float,class:^(scrcpy)$,title:^(SM-A105M)$
 windowrulev2 = float,title:^(guiscrcpy)$
-
+# h-m-m
 windowrulev2 = float,class:^(h-m-m)$
 windowrulev2 = size 60% 60%,class:^(h-m-m)$
-
+# whats
 windowrulev2 = float,class:^(whatsapp-for-linux)$,title:^(WhatsApp for Linux)$
 windowrulev2 = size 70% 80%,class:^(whatsapp-for-linux)$
 windowrulev2 = move 200 80,class:^(whatsapp-for-linux)$
-
 windowrulev2 = float,class:^(io.github.whoozle.android-file-transfer)$,title:^(Android File Transfer for Linux)$
-
 windowrulev2 = float,class:^(firefox)$,title:^(Library)$
 windowrulev2 = float,title:^(Fazer login nas Contas do Google — Mozilla Firefox)$
 windowrulev2 = move 100 100,title:^(calculator)$
 windowrulev2 = float,class:^(pavucontrol)$,title:^(Volume Control)$
-
 # default to wks
-windowrulev2 = workspace 2,class:^(firefox)$,
+# title
+windowrulev2 = workspace 5 silent,title:^(Steam)$
+
+# class
+windowrulev2 = workspace 4,class:^(mpv)$
+windowrulev2 = workspace 2 silent,class:^(firefox)$,
 windowrulev2 = workspace 2,class:^(floorp)$,
+windowrulev2 = workspace 2 silent,class:^(org.mozilla.firefox)$,
 windowrulev2 = workspace 2,class:^(org.qutebrowser.qutebrowser)$
+windowrulev2 = workspace 3 silent,class:^(Alacritty)$
+windowrulev2 = workspace 5 silent,class:^(org.libretro.RetroArch)$
+windowrulev2 = workspace 5 silent,class:^(pcsx2-qt)$
+windowrulev2 = workspace 5 silent,class:^(zenity)$,title:^(Steam Setup)$
+windowrulev2 = workspace 5 silent,class:^(steam)$,title:^(Steam)$
+windowrulev2 = workspace 5 silent,class:^(heroic)$
+windowrulev2 = workspace 5 silent,class:^(steam)$
+windowrulev2 = workspace 5 silent,class:^(lutris)$
+windowrulev2 = workspace 6 silent,class:^(YouTube Music)$,title:^(YouTube Music)$
+windowrulev2 = workspace 7 silent,class:^(Waydroid)$
 
-windowrulev2 = workspace 3,class:^(Alacritty)$
-
-#windowrulev2 = workspace 4,class:^(mpv)$
-
-windowrulev2 = workspace 5,class:^(org.libretro.RetroArch)$
-windowrulev2 = workspace 5,class:^(pcsx2-qt)$
-windowrulev2 = workspace 5,class:^(zenity)$,title:^(Steam Setup)$
-windowrulev2 = workspace 5,class:^(steam)$,title:^(Steam)$
-windowrulev2 = workspace 5,title:^(Steam)$
-windowrulev2 = workspace 5, class:^(heroic)$
-windowrulev2 = workspace 5, class:^(steam)$
-windowrulev2 = workspace 5, class:^(lutris)$
-
-windowrulev2 = workspace 6,class:^(YouTube Music)$,title:^(YouTube Music)$
-windowrulev2 = workspace 7,class:^(Waydroid)$
-
+# opacity
 windowrule = opacity 1.0 override 1.0 override,^(firefox)$
 windowrule = opacity 1.0 override 1.0 override,^(org.mozilla.firefox)$
 windowrule = opacity 1.0 override 1.0 override,^(floorp)$
-
-# this is for fixing steam menus
-windowrulev2 = stayfocused, title:^()$,class:^(steam)$
-windowrulev2 = minsize 1 1, title:^()$,class:^(steam)$
+windowrulev2 = opacity 1.0 override,class:^(steam)$
+windowrulev2 = opacity 1.0 override,class:^(heroic)$
 
 # steam
 windowrulev2 = float,class:^(steam)$,title:^(Steam Settings)$
