--- a/.config/hypr/configs/binds.conf
+++ b/.config/hypr/configs/binds.conf
@@ -9,7 +9,8 @@ bind = $mainMod, P, focuscurrentorlast
 bind = $mainMod, C, layoutmsg,swapwithmaster 
 bind = $sS, F, layoutmsg,focusmaster
 bind=SUPER,TAB,workspace,previous
-bind = $mainMod, U, layoutmsg,orientationtop
+bind = $sS, V, exec, ankiv.sh
+bind = $sS, M, exec, maps.sh
 
 ## mouse binds
 bind = $mainMod, mouse_down, workspace, e-1
