--- a/.config/hypr/configs/scratchpads.conf
+++ b/.config/hypr/configs/scratchpads.conf
@@ -2,6 +2,10 @@ $dropterm = ^(alacritty-dropterm)$
 windowrule = float,$dropterm
 windowrule = workspace special silent,$dropterm
 
+$canki = ^(canki)$
+windowrule = float,$canki
+windowrule = workspace special silent,$canki
+
 $todo = ^(neorg)$
 windowrule = float,$todo
 windowrule = workspace special silent,$todo
@@ -34,9 +38,10 @@ binde=,c,exec,pypr toggle countdown
 bind=,c,submap,reset
 binde=,i,exec,pypr toggle neorg
 bind=,i,submap,reset
-binde=,s,exec,pypr toggle study
-bind=,s,submap,reset
-binde=,t,exec,pypr toggle task && task sync
+binde=,t,exec,pypr toggle task
 bind=,t,submap,reset
+binde=,s,exec,pypr toggle canki
+bind=,s,submap,reset
+bind=,catchall,submap,reset
 bind=,escape,submap,reset 
 submap=reset
