--- a/.config/hypr/configs/wrules.conf
+++ b/.config/hypr/configs/wrules.conf
@@ -1,5 +1,6 @@
 # floating 
 windowrulev2 = float,class:^(org.kde.polkit-kde-authentication-agent-1)$,title:^(Authentication Required — PolicyKit1 KDE Agent)$
+windowrulev2 = float,class:^(hiit)$
 windowrulev2 = float,class:^(nwg-look)$,title:^(nwg-look)$
 windowrulev2 = float,class:^(safeeyes)$,title:^(Safe Eyes)$
 windowrulev2 = float,class:^(com.github.tchx84.Flatseal)$,title:^(Flatseal)$
@@ -12,13 +13,13 @@ windowrulev2 = move 40% class:^(blueman-manager)$
 windowrulev2 = float,class:^(c_info)$,title:^(Alacritty)$
 windowrulev2 = float,class:^(scrcpy)$,title:^(SM-A105M)$
 windowrulev2 = float,title:^(guiscrcpy)$
+windowrulev2 = float,title:^(maps)$
+windowrulev2 = float,title:^(canki)$
 # h-m-m
 windowrulev2 = float,class:^(h-m-m)$
 windowrulev2 = size 60% 60%,class:^(h-m-m)$
 # whats
 windowrulev2 = float,class:^(whatsapp-for-linux)$,title:^(WhatsApp for Linux)$
-windowrulev2 = size 70% 80%,class:^(whatsapp-for-linux)$
-windowrulev2 = move 200 80,class:^(whatsapp-for-linux)$
 windowrulev2 = float,class:^(io.github.whoozle.android-file-transfer)$,title:^(Android File Transfer for Linux)$
 windowrulev2 = float,class:^(firefox)$,title:^(Library)$
 windowrulev2 = float,title:^(Fazer login nas Contas do Google — Mozilla Firefox)$
