--- a/.config/hypr/configs/submaps.conf
+++ b/.config/hypr/configs/submaps.conf
@@ -7,7 +7,6 @@ bind=,i,submap,reset
 binde=,b,exec,killall -SIGUSR2 waybar
 bind=,b,submap,reset
 bind=,w,submap,window
-bind=,r,submap,resize
 bind=,escape,submap,reset 
 
 submap=resize
@@ -22,6 +21,8 @@ binde=,o,togglefloating
 bind=,o,submap,reset
 binde=,f,fullscreen,0
 bind=,f,submap,reset
+binde=,k,killactive 
+bind=,k,submap,reset
 binde=,b,fullscreen,1
 bind=,b,submap,reset
 binde=,i,fakefullscreen
@@ -32,6 +33,7 @@ bind=,s,layoutmsg,swapwithmaster
 bind=,s,submap,reset
 binde=,m,layoutmsg,focusmaster
 bind=,m,submap,reset
+bind=,r,submap,resize
 bind=,escape,submap,reset 
 submap=reset
 
@@ -43,10 +45,6 @@ binde=,b,exec,$browser
 bind=,b,submap,reset
 binde=,a,exec,waydroid show-full-ui
 bind=,a,submap,reset
-binde=,e,exec, flatpak run com.github.wwmm.easyeffects -l 'LoudnessEqualizer'
-bind=,e,submap,reset
-binde=,m,exec, flatpak run com.github.wwmm.easyeffects -l 'my-heavy-bass'
-bind=,m,submap,reset
 binde=,h,exec,cliphist list | bemenu -l 10 | cliphist decode | wl-copy
 bind=,h,submap,reset
 binde=,p,exec,pymor -l 2
@@ -57,8 +55,24 @@ binde=,l,exec,open_mm.sh
 bind=,l,submap,reset
 binde=,o,exec,wlogout
 bind=,o,submap,reset
+binde=,t,exec,flatpak run xyz.safeworlds.hiit
+bind=,t,submap,reset
+binde=,s,submap,studies
+bind=,s,submap,reset
 bind=,g,submap,games
+bind=,e,submap,effects
 bind=,escape,submap,reset 
+
+submap=studies
+binde=,m,exec,maps.sh
+bind=,m,submap,reset
+bind=,escape,submap,reset 
+
+submap=effects
+binde=,l,exec, flatpak run com.github.wwmm.easyeffects -l 'LoudnessEqualizer'
+bind=,l,submap,reset
+binde=,b,exec, flatpak run com.github.wwmm.easyeffects -l 'my-heavy-bass'
+bind=,b,submap,reset
 
 submap=games
 binde=,s,exec,steam
@@ -102,6 +116,7 @@ binde=,m,workspace,6
 bind=,m,submap,reset
 binde=,a,workspace,7
 bind=,a,submap,reset
+bind=,catchall,submap,reset
 bind=,escape,submap,reset 
 submap=reset
 
