--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -1,6 +1,6 @@
 background {
     monitor =
-    path = screenshot
+    path = ~/Downloads/mylivewallpapers.com-Ciri-Rain-ezgif.com-gif-to-apng-converter.png
     color = rgba(25, 20, 20, 1.0)
 
     # all these options are taken from hyprland, see https://wiki.hyprland.org/Configuring/Variables/#blur for explanations
