--- a/.config/hypr/configs/submaps.conf
+++ b/.config/hypr/configs/submaps.conf
@@ -45,7 +45,7 @@ binde=,b,exec,$browser
 bind=,b,submap,reset
 binde=,a,exec,waydroid show-full-ui
 bind=,a,submap,reset
-binde=,h,exec,cliphist list | bemenu -l 10 | cliphist decode | wl-copy
+binde=,h,exec,alacritty --class floating -e zsh  -c 'clipse $PPID'
 bind=,h,submap,reset
 binde=,p,exec,pymor -l 2
 bind=,p,submap,reset
