--- a/.config/hypr/configs/wrules.conf
+++ b/.config/hypr/configs/wrules.conf
@@ -1,4 +1,5 @@
 # floating 
+windowrulev2 = float,class:(floating)                                                      # ensure you have defined a floating window class
 windowrulev2 = float,class:^(org.kde.polkit-kde-authentication-agent-1)$,title:^(Authentication Required — PolicyKit1 KDE Agent)$
 windowrulev2 = float,class:^(hiit)$
 windowrulev2 = float,class:^(nwg-look)$,title:^(nwg-look)$
