--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -2,7 +2,7 @@
   "layer": "top",
     "position": "right",
     "modules-left": ["hyprland/workspaces"],
-    "modules-right": ["hyprland/submap", "custom/dsbattery-icon", "custom/dsbattery", "pulseaudio#icon", "pulseaudio", "custom/disk-root", "disk", "custom/disk-home", "disk#home", "custom/temp-icon", "temperature", "custom/cpu-icon", "cpu","custom/ram-icon", "memory","custom/separator", "tray", "custom/separator", "clock", "clock#day", "clock#week-day"],
+    "modules-right": ["hyprland/submap", "pulseaudio#icon", "pulseaudio", "custom/disk-root", "disk", "custom/disk-home", "disk#home", "custom/temp-icon", "temperature", "custom/cpu-icon", "cpu","custom/ram-icon", "memory","custom/separator", "tray", "custom/separator", "clock", "clock#day", "clock#week-day"],
     "hyprland/workspaces": {
       "all-outputs": false,
       "active-only": false,
@@ -23,45 +23,8 @@
         "*": 7
       }
     },
-    "gamemode": {
-      "format": "{glyph}",
-      "format-alt": "{glyph} {count}",
-      "glyph": "",
-      "hide-not-running": false,
-      "use-icon": true,
-      "icon-name": "input-gaming-symbolic",
-      "icon-spacing": 4,
-      "icon-size": 20,
-      "tooltip": true,
-      "tooltip-format": "Games running: {count}"
-    },
-    "custom/temp-icon": {
-      "tooltip": false,
-      "format": ""
-    },
-    "temperature": {
-      "thermal-zone": 2,
-      // "hwmon-path": "/sys/class/hwmon/hwmon2/temp1_input",
-      // "critical-threshold": 80,
-      // "format-critical": "{temperatureC}°C ",
-      "format": "{temperatureC}°"
-    },
-    "custom/dsbattery-icon": {
-      "format": "{}",
-      "interval": 60,
-      "escape": true,
-      "exec": "ps4_status.sh icon",
-      "on-click-right": "dsbattery -d"
-    },
-    "custom/dsbattery": {
-      "format": "{}",
-      "interval": 3,
-      "escape": true,
-      "exec": "ps4_status.sh perc",
-      "on-click-right": "dsbattery -d"
-    },
     "pulseaudio#icon": {
-      "format": "{icon}",
+      "format": "<span font='10'>{icon}</span>",
       "format-bluetooth": "{icon}",
       "format-muted": "",
       "format-icons": {
@@ -84,14 +47,38 @@
       "on-click": "pavucontrol",
       "ignored-sinks": ["Easy Effects Sink"]
     },
+    "custom/temp-icon": {
+      "tooltip": false,
+      "format": "<span font='13'></span>"
+    },
+    "temperature": {
+      "thermal-zone": 2,
+      "critical-threshold": 80,
+      "format": "{temperatureC}°"
+    },
+    "custom/dsbattery-icon": {
+      "format": "{}",
+      "interval": 60,
+      "escape": true,
+      "exec": "ps4_status.sh icon",
+      "on-click-right": "dsbattery -d"
+    },
+    "custom/dsbattery": {
+      "format": "{}",
+      "interval": 3,
+      "escape": true,
+      "exec": "ps4_status.sh perc",
+      "on-click-right": "dsbattery -d"
+    },
+
     "hyprland/submap": {
       "format": "",
       "max-length": 8,
       "tooltip": false
     },
     "tray": {
-      "icon-size": 21,
-      "spacing": 10
+      "icon-size": 18,
+      "spacing": 4
     },
     "clock#day": {
       "format": "{:%d}",
@@ -129,7 +116,7 @@
     },
     "custom/cpu-icon": {
       "tooltip": false,
-      "format": ""
+      "format": "<span font='12'></span>"
     },
     "cpu": {
       "format": "{usage}%",
@@ -137,7 +124,7 @@
     },
     "custom/disk-root": {
       "tooltip": false,
-      "format": ""
+      "format": "<span font='12'></span>"
     },
     "disk": {
       "interval": 30,
