--- a/.config/hypr/configs/scratchpads.conf
+++ b/.config/hypr/configs/scratchpads.conf
@@ -10,6 +10,10 @@ $todo = ^(neorg)$
 windowrule = float,$todo
 windowrule = workspace special silent,$todo
 
+$tt = ^(tt)$
+windowrule = float,$tt
+windowrule = workspace special silent,$tt
+
 $study = ^(study)$
 windowrule = float,$study
 windowrule = workspace special silent,$study
@@ -40,6 +44,8 @@ binde=,i,exec,pypr toggle neorg
 bind=,i,submap,reset
 binde=,t,exec,pypr toggle task
 bind=,t,submap,reset
+binde=,e,exec,pypr toggle tt
+bind=,e,submap,reset
 binde=,s,exec,pypr toggle canki
 bind=,s,submap,reset
 bind=,catchall,submap,reset
