--- a/.config/hypr/configs/binds.conf
+++ b/.config/hypr/configs/binds.conf
@@ -2,7 +2,6 @@
 bind = $mainMod, T, exec, $terminal
 bind = $sS, C, killactive 
 
-## Move focus with mainMod + arrow keys
 bind = $mainMod, J, layoutmsg,cyclenext
 bind = $mainMod, K, layoutmsg,cycleprev
 bind = $mainMod, P, focuscurrentorlast
@@ -12,7 +11,10 @@ bind=SUPER,TAB,workspace,previous
 bind = $sS, V, exec, ankiv.sh
 bind = $sS, M, exec, maps.sh
 
-## mouse binds
+bind = $mainMod, PRINT, exec, hyprshot -m window
+bind = $mainMod, y, exec, hyprshot -m output
+bind = $shiftMod, PRINT, exec, hyprshot -m region
+
 bind = $mainMod, mouse_down, workspace, e-1
 bind = $mainMod, mouse_up, workspace, e+1
 bindm = $mainMod, mouse:272, movewindow
