--- a/.config/hypr/configs/env.conf
+++ b/.config/hypr/configs/env.conf
@@ -6,4 +6,5 @@ env = SDL_VIDEODRIVER,wayland
 env = CLUTTER_BACKEND,wayland
 env = XDG_SESSION_TYPE,wayland
 env = XDG_SESSION_DESKTOP,Hyprland
+env = WLR_NO_HARDWARE_CURSORS,1
 
