--- a/.config/hypr/configs/submaps.conf
+++ b/.config/hypr/configs/submaps.conf
@@ -1,13 +1,15 @@
+#actions
 bind=$mainMod,a,submap,action
 submap=action
-binde=,k,killactive
+bind=,k,killactive
 bind=,k,submap,reset
 bind=,i,exec,hypr_windows.sh
 bind=,i,submap,reset
-binde=,b,exec,killall -SIGUSR2 waybar
+bind=,b,exec,killall -SIGUSR2 waybar
 bind=,b,submap,reset
 bind=,w,submap,window
 bind=,escape,submap,reset 
+submap=reset
 
 submap=resize
 binde=,l,resizeactive,80 0
@@ -15,106 +17,110 @@ binde=,h,resizeactive,-80 0
 binde=,k,resizeactive,0 -80
 binde=,j,resizeactive,0 80
 bind=,escape,submap,reset 
+submap=reset
 
 submap=window
-binde=,o,togglefloating
+bind=,o,togglefloating
 bind=,o,submap,reset
-binde=,f,fullscreen,0
+bind=,f,fullscreen,0
 bind=,f,submap,reset
-binde=,k,killactive 
+bind=,k,killactive 
 bind=,k,submap,reset
-binde=,b,fullscreen,1
+bind=,b,fullscreen,1
 bind=,b,submap,reset
-binde=,i,fakefullscreen
+bind=,i,fakefullscreen
 bind=,i,submap,reset
-binde=,l,focuscurrentorlast
+bind=,l,focuscurrentorlast
 bind=,l,submap,reset
 bind=,s,layoutmsg,swapwithmaster 
 bind=,s,submap,reset
-binde=,m,layoutmsg,focusmaster
+bind=,m,layoutmsg,focusmaster
 bind=,m,submap,reset
 bind=,r,submap,resize
 bind=,escape,submap,reset 
 submap=reset
 
+#exec
 bind=$mainMod,e,submap,exec
 submap=exec
-binde=,r,exec,$runner
+bind=,r,exec,$runner
 bind=,r,submap,reset
-binde=,b,exec,$browser
+bind=,b,exec,$browser
 bind=,b,submap,reset
-binde=,a,exec,waydroid show-full-ui
+bind=,a,exec,waydroid show-full-ui
 bind=,a,submap,reset
-binde=,h,exec,alacritty --class floating -e zsh  -c 'clipse $PPID'
+bind=,h,exec,alacritty --class floating -e zsh  -c 'clipse $PPID'
 bind=,h,submap,reset
-binde=,p,exec,pymor -l 2
+bind=,p,exec,pymor -l 2
 bind=,p,submap,reset
-binde=,n,exec,dunstctl close-all
+bind=,n,exec,dunstctl close-all
 bind=,n,submap,reset
-binde=,l,exec,open_mm.sh
+bind=,l,exec,open_mm.sh
 bind=,l,submap,reset
-binde=,o,exec,wlogout
+bind=,o,exec,wlogout
 bind=,o,submap,reset
-binde=,t,exec,flatpak run xyz.safeworlds.hiit
+bind=,t,exec,flatpak run xyz.safeworlds.hiit
 bind=,t,submap,reset
-binde=,s,submap,studies
+bind=,s,submap,studies
 bind=,s,submap,reset
 bind=,g,submap,games
 bind=,e,submap,effects
 bind=,escape,submap,reset 
+submap=reset
 
 submap=studies
-binde=,m,exec,maps.sh
+bind=,m,exec,maps.sh
 bind=,m,submap,reset
 bind=,escape,submap,reset 
+submap=reset
 
 submap=effects
-binde=,l,exec, flatpak run com.github.wwmm.easyeffects -l 'LoudnessEqualizer'
+bind=,l,exec, flatpak run com.github.wwmm.easyeffects -l 'LoudnessEqualizer'
 bind=,l,submap,reset
-binde=,b,exec, flatpak run com.github.wwmm.easyeffects -l 'my-heavy-bass'
+bind=,b,exec, flatpak run com.github.wwmm.easyeffects -l 'my-heavy-bass'
 bind=,b,submap,reset
+submap=reset
 
 submap=games
-binde=,s,exec,steam
+bind=,s,exec,steam
 bind=,s,submap,reset
-binde=,l,exec,lutris
+bind=,l,exec,lutris
 bind=,l,submap,reset
-binde=,h,exec,heroic
+bind=,h,exec,heroic
 bind=,h,submap,reset
-binde=,d,exec,dsbattery -d
+bind=,d,exec,dsbattery -d
 bind=,d,submap,reset
 bind=,escape,submap,reset 
 submap=reset
 
 bind=$mainMod,L,submap,layout
 submap=layout
-binde=,j,layoutmsg,swapnext
+bind=,j,layoutmsg,swapnext
 bind=,j,submap,reset
-binde=,k,layoutmsg,swapprev
+bind=,k,layoutmsg,swapprev
 bind=,k,submap,reset
-binde=,f,layoutmsg,focusmaster
+bind=,f,layoutmsg,focusmaster
 bind=,f,submap,reset
-binde=,s,layoutmsg,swapwithmaster
+bind=,s,layoutmsg,swapwithmaster
 bind=,s,submap,reset
 bind=,escape,submap,reset 
 submap=reset
 
-## workspace keyshort
 bind=$mainMod,W,submap,workspace
 submap=workspace
-binde=,c,workspace,1
+bind=,c,workspace,1
 bind=,c,submap,reset
-binde=,b,workspace,2
+bind=,b,workspace,2
 bind=,b,submap,reset
-binde=,t,workspace,3
+bind=,t,workspace,3
 bind=,t,submap,reset
-binde=,v,workspace,4
+bind=,v,workspace,4
 bind=,v,submap,reset
-binde=,g,workspace,5
+bind=,g,workspace,5
 bind=,g,submap,reset
-binde=,m,workspace,6
+bind=,m,workspace,6
 bind=,m,submap,reset
-binde=,a,workspace,7
+bind=,a,workspace,7
 bind=,a,submap,reset
 bind=,catchall,submap,reset
 bind=,escape,submap,reset 
@@ -122,24 +128,23 @@ submap=reset
 
 bind=$mainMod,M,submap,movetoworkspace
 submap=movetoworkspace
-binde=,c,movetoworkspace, 1
+bind=,c,movetoworkspace, 1
 bind=,c,submap,reset
-binde=,b,movetoworkspace, 2
+bind=,b,movetoworkspace, 2
 bind=,b,submap,reset
-binde=,t,movetoworkspace, 3
+bind=,t,movetoworkspace, 3
 bind=,t,submap,reset
-binde=,v,movetoworkspace, 4
+bind=,v,movetoworkspace, 4
 bind=,v,submap,reset
-binde=,g,movetoworkspace, 5
+bind=,g,movetoworkspace, 5
 bind=,g,submap,reset
-binde=,m,movetoworkspace, 6
+bind=,m,movetoworkspace, 6
 bind=,m,submap,reset
-binde=,a,movetoworkspace, 7
+bind=,a,movetoworkspace, 7
 bind=,a,submap,reset
 bind=,escape,submap,reset 
 submap=reset
 
-## volume keychord
 bind=$mainMod,V,submap,volume
 submap=volume
 binde=,K,exec,swayosd-client --output-volume raise
