--- a/.config/hypr/configs/submaps.conf
+++ b/.config/hypr/configs/submaps.conf
@@ -8,6 +8,7 @@ bind=,i,submap,reset
 bind=,b,exec,killall -SIGUSR2 waybar
 bind=,b,submap,reset
 bind=,w,submap,window
+bind=,l,submap,layout
 bind=,escape,submap,reset 
 submap=reset
 
@@ -103,6 +104,10 @@ bind=,f,layoutmsg,focusmaster
 bind=,f,submap,reset
 bind=,s,layoutmsg,swapwithmaster
 bind=,s,submap,reset
+bind=,t,togglegroup
+bind=,t,submap,reset
+bind=,n,changegroupactive
+bind=,n,submap,reset
 bind=,escape,submap,reset 
 submap=reset
 
