--- a/.config/hypr/configs/scratchpads.conf
+++ b/.config/hypr/configs/scratchpads.conf
@@ -26,6 +26,10 @@ $btop = ^(btop)$
 windowrule = float,$btop
 windowrule = workspace special silent,$btop
 
+$noi = ^(Noi)$
+windowrule = float,$noi
+windowrule = workspace special silent,$noi
+
 $countdown = ^(countdown)$
 windowrule = float,$countdown
 windowrule = workspace special silent,$countdown
@@ -40,12 +44,14 @@ binde=,b,exec,pypr toggle btop
 bind=,b,submap,reset
 binde=,c,exec,pypr toggle countdown
 bind=,c,submap,reset
-binde=,i,exec,pypr toggle neorg
-bind=,i,submap,reset
+binde=,e,exec,pypr toggle neorg
+bind=,e,submap,reset
 binde=,t,exec,pypr toggle task
 bind=,t,submap,reset
-binde=,e,exec,pypr toggle tt
-bind=,e,submap,reset
+binde=,i,exec,pypr toggle noi
+bind=,i,submap,reset
+binde=,o,exec,pypr toggle tt
+bind=,o,submap,reset
 binde=,s,exec,pypr toggle canki
 bind=,s,submap,reset
 bind=,catchall,submap,reset
