--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -62,7 +62,7 @@
     "temperature": {
       "thermal-zone": 2,
       "critical-threshold": 80,
-      "format": "{temperatureC}"
+      "format": "{temperatureC}°"
     },
     "custom/dsbattery-icon": {
       "format": "{}",
