--- a/.config/hypr/configs/general.conf
+++ b/.config/hypr/configs/general.conf
@@ -1,6 +1,6 @@
 general {
-  gaps_in = 0
-  gaps_out = 0
+  gaps_in = 4
+  gaps_out = 10
   border_size = 0
   cursor_inactive_timeout	= 5
   no_cursor_warps = 0
@@ -9,13 +9,13 @@ general {
 }
 
 decoration {
-  rounding = 0
+  rounding = 20
   inactive_opacity = 0.4
   drop_shadow = no
 
   col.shadow = rgba(1a1a1aee)
   blur {
-    enabled = off
+    enabled = on
   }
 }
 
@@ -38,7 +38,7 @@ binds {
 
 master {
   new_is_master = true
-  no_gaps_when_only = true
+  no_gaps_when_only = false
   orientation = top
 }
 
