--- a/.config/hypr/configs/scratchpads.conf
+++ b/.config/hypr/configs/scratchpads.conf
@@ -14,6 +14,10 @@ $tt = ^(tt)$
 windowrule = float,$tt
 windowrule = workspace special silent,$tt
 
+$todo = ^(Kuro)$
+windowrule = float,$todo
+windowrule = workspace special silent,$todo
+
 $study = ^(study)$
 windowrule = float,$study
 windowrule = workspace special silent,$study
@@ -46,7 +50,7 @@ binde=,c,exec,pypr toggle countdown
 bind=,c,submap,reset
 binde=,e,exec,pypr toggle neorg
 bind=,e,submap,reset
-binde=,t,exec,pypr toggle task
+binde=,t,exec,pypr toggle todo
 bind=,t,submap,reset
 binde=,i,exec,pypr toggle noi
 bind=,i,submap,reset
