--- a/.config/hypr/configs/wrules.conf
+++ b/.config/hypr/configs/wrules.conf
@@ -7,6 +7,10 @@ windowrulev2 = float,class:^(safeeyes)$,title:^(Safe Eyes)$
 windowrulev2 = float,class:^(com.github.tchx84.Flatseal)$,title:^(Flatseal)$
 windowrulev2 = float,class:^(org.kde.kdeconnect.app)$,title:^(KDE Connect)$
 windowrulev2 = float,class:^(net.davidotek.pupgui2)$,title:^(ProtonUp-Qt - Wine/Proton Installer)$
+windowrulev2 = float,class:^(Bitwarden)$
+
+windowrule = noblur,^(alacritty-dropterm)$ # disables blur for firefox
+
 # blueman
 windowrulev2 = float,class:^(blueman-manager)$
 windowrulev2 = size 60% 60%,class:^(blueman-manager)$
@@ -33,6 +37,7 @@ windowrulev2 = workspace 5 silent,title:^(Steam)$
 # class
 windowrulev2 = workspace 4,class:^(mpv)$
 windowrulev2 = workspace 2 silent,class:^(firefox)$,
+windowrulev2 = workspace 2 silent,class:^(Brave-browser)$,
 windowrulev2 = workspace 2,class:^(floorp)$,
 windowrulev2 = workspace 2 silent,class:^(org.mozilla.firefox)$,
 windowrulev2 = workspace 2,class:^(org.qutebrowser.qutebrowser)$
@@ -49,6 +54,7 @@ windowrulev2 = workspace 7 silent,class:^(Waydroid)$
 
 # opacity
 windowrule = opacity 1.0 override 1.0 override,^(firefox)$
+windowrule = opacity 1.0 override 1.0 override,^(Brave-browser)$
 windowrule = opacity 1.0 override 1.0 override,^(org.mozilla.firefox)$
 windowrule = opacity 1.0 override 1.0 override,^(floorp)$
 windowrulev2 = opacity 1.0 override,class:^(steam)$
