added Xwayland window to group 5

--- a/.config/hypr/configs/wrules.conf
+++ b/.config/hypr/configs/wrules.conf
@@ -45,6 +45,7 @@ windowrulev2 = workspace 3 silent,class:^(Alacritty)$
 windowrulev2 = workspace 5 silent,class:^(org.libretro.RetroArch)$
 windowrulev2 = workspace 5 silent,class:^(pcsx2-qt)$
 windowrulev2 = workspace 5 silent,class:^(zenity)$,title:^(Steam Setup)$
+windowrulev2 = workspace 5 silent,class:^(org.freedesktop.Xwayland)$
 windowrulev2 = workspace 5 silent,class:^(steam)$,title:^(Steam)$
 windowrulev2 = workspace 5 silent,class:^(heroic)$
 windowrulev2 = workspace 5 silent,class:^(steam)$
